# pico-test-bench

./: .gitmodules  CMakeLists.txt  capture.pio  edgedetect.pio  logic.c  logic.h  main.c  spi_slave.pio  spsc.c  spsc.h  test-bench-interfaces.options  test-bench-interfaces.proto  tool.c  trigger.c  trigger.h  triggergen.pio  tusb_config.h  usb_descriptors.c
py/: parse.py  usbwriter.py  write.py
